# Russian-Mansi-Translator

./: .gitignore  README.md  how to.txt  howto.txt  requirements.txt
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt  test  test.py
backend/alembic/: env.py
backend/alembic/versions/: 32ebdf4f0e63_add_phrase_translation_table.py  4510ec1be88d_initial_migration_for_multiple_tables.py  5c994cba75a6_initial_migration_for_multiple_tables.py  91414d3cad83_add_phrase_translation_table.py  ad0a8db8f2a8_initial_migration_for_multiple_tables.py  ddcb4afe1c99_add_phrase_translation_table.py  f05db19eeef2_add_phrase_translation_table.py  f11ea4c5480a_initial_migration_for_multiple_tables.py
backend/app/: auth.py  main.py  settings.py
backend/app/crud/: phrase.py  suggested_phrase.py  suggested_word.py  word.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/ml_models/: translation_model.py
backend/app/models/: phrase.py  suggested_phrase.py  suggested_word.py  word.py
backend/app/schemas/: phrase.py  suggested_phrase.py  suggested_word.py  translation.py  word.py
backend/app/static/css/: style.css
backend/app/static/js/: keyboard.js  keyboard_add_phrase.js  keyboard_add_word.js  keyboard_dict.js
backend/app/templates/: dict.html  index.html  links.html  thematic.html
backend/app/templates/add_translation/: add_translation_pharse.html  add_translation_phrase.html  add_translation_word.html
backend/app/templates/css/: style.css
backend/app/templates/keyboard/: keyboard-mansi-lower.html  keyboard-mansi-shift.html  (+10 more)
(+50 files in other folders)
